--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "font-awesome": "^4.7.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-type-animation": "^3.2.0",
+    "swiper": "^11.1.14",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "postcss": "^8",
